changing padding and width of nav to avoid text overflow at 750px

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ main{
 .navlinks .displayed .link{
   color: #123440;
   text-transform: uppercase;
-  letter-spacing: .2em;
+  letter-spacing: .1em;
   overflow: hidden;
 }
 
@@ -410,11 +410,11 @@ input[type=text], input[type=email], textarea {
     justify-content: flex-start;
   }
   .navlinks li{
-    max-width: 20%;
-    /* min-width: 20%; */
+    width: auto;
+    min-width: 10%;
     /* max-width: auto; */
     white-space: nowrap;
-    padding: 1% 3% 1% 3%;
+    padding: 1% 2.5% 1% 2.5%;
   }
   .navlinks li:hover{
     text-decoration: underline;
